update url (include cdn)

--- a/splatoon_cdn.css
+++ b/splatoon_cdn.css
@@ -180,8 +180,8 @@ yt-live-chat-text-message-renderer yt-live-chat-author-chip {
   padding: 11px 90px 11px 90px;
   justify-content: center;
   background-color: #b3b3b3 !important;
-  background-image: url("../background/nol_ticker.png"),
-    url("../background/name_back.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_ticker.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/name_back.png");
   background-size: 75px 20px, 112px 53px;
   background-repeat: no-repeat, no-repeat;
   background-position: 10px 50%, right bottom;
@@ -193,7 +193,7 @@ yt-live-chat-text-message-renderer[author-type="member"]
   content: "";
   width: 56px;
   height: 60px;
-  background-image: url("../background/level3_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level3_medal.png");
   background-size: 50px 54px;
   background-repeat: no-repeat, no-repeat;
   background-position: left top, right bottom;
@@ -204,18 +204,18 @@ yt-live-chat-text-message-renderer[author-type="member"]
 }
 yt-live-chat-text-message-renderer[privilegetype="2"]
   yt-live-chat-author-chip::before {
-  background-image: url("../background/level2_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level2_medal.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="1"]
   yt-live-chat-author-chip::before {
-  background-image: url("../background/level1_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level1_medal.png");
 }
 yt-live-chat-text-message-renderer yt-live-chat-author-chip::after {
   content: "";
   width: calc(100% + 14px);
   height: calc(100% + 8px);
-  background-image: url("../background/nol_name1.png"),
-    url("../background/nol_name2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_name1.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_name2.png");
   background-size: 167px 47px, 49px 43px;
   background-repeat: no-repeat, no-repeat;
   background-position: left top, right bottom;
@@ -228,7 +228,7 @@ yt-live-chat-text-message-renderer #author-photo::before {
   content: "";
   width: 41px;
   height: 48px;
-  background-image: url("../background/nol_photo1.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_photo1.png");
   background-size: 41px 48px;
   background-repeat: no-repeat;
   background-position: left top;
@@ -241,7 +241,7 @@ yt-live-chat-text-message-renderer #author-photo::after {
   content: "";
   width: 89px;
   height: 123px;
-  background-image: url("../background/nol_photo.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_photo.png");
   background-size: 89px 123px;
   background-repeat: no-repeat;
   background-position: left top;
@@ -260,7 +260,7 @@ yt-live-chat-text-message-renderer #image-and-message::after {
   width: calc(100% - 90px);
   height: calc(100% - 74px);
   border: solid;
-  border-image-source: url("../background/nol_box.png");
+  border-image-source: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/nol_box.png");
   border-image-slice: 50 13 41 89 fill;
   border-width: 50px 13px 41px 89px;
   position: absolute;
@@ -270,36 +270,36 @@ yt-live-chat-text-message-renderer #image-and-message::after {
 }
 yt-live-chat-text-message-renderer[author-type="member"]
   yt-live-chat-author-chip {
-  background-image: url("../background/special_ticker.png"),
-    url("../background/name_back.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/special_ticker.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/name_back.png");
   background-size: 72px 20px, 112px 53px;
 }
 yt-live-chat-text-message-renderer[privilegetype="3"] yt-live-chat-author-chip {
   background-color: #13b099 !important;
 }
 yt-live-chat-text-message-renderer[privilegetype="3"] #author-photo::before {
-  background-image: url("../background/level3_photo1.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level3_photo1.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="3"] #author-photo::after {
-  background-image: url("../background/level3_photo.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level3_photo.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="2"] yt-live-chat-author-chip {
   background-color: #593ac0 !important;
 }
 yt-live-chat-text-message-renderer[privilegetype="2"] #author-photo::before {
-  background-image: url("../background/level2_photo1.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level2_photo1.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="2"] #author-photo::after {
-  background-image: url("../background/level2_photo.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level2_photo.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="1"] yt-live-chat-author-chip {
   background-color: #de3c80 !important;
 }
 yt-live-chat-text-message-renderer[privilegetype="1"] #author-photo::before {
-  background-image: url("../background/level1_photo1.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level1_photo1.png");
 }
 yt-live-chat-text-message-renderer[privilegetype="1"] #author-photo::after {
-  background-image: url("../background/level1_photo.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/level1_photo.png");
 }
 yt-live-chat-membership-item-renderer {
   padding: 0px 10px 20px 10px !important;
@@ -330,8 +330,8 @@ yt-live-chat-membership-item-renderer #author-name::after {
   content: "";
   width: calc(100% - 0px);
   height: calc(100% - 0px);
-  background-image: url("../background/ship_mark.png"),
-    url("../background/ship3_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_mark.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship3_medal.png");
   background-size: 88px 15px, 42px 69px;
   background-repeat: no-repeat, no-repeat;
   background-position: left + 4px bottom + 4px, right + 12px center;
@@ -341,12 +341,12 @@ yt-live-chat-membership-item-renderer #author-name::after {
   z-index: 2;
 }
 yt-live-chat-membership-item-renderer[privilegetype="2"] #author-name::after {
-  background-image: url("../background/ship_mark.png"),
-    url("../background/ship2_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_mark.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship2_medal.png");
 }
 yt-live-chat-membership-item-renderer[privilegetype="1"] #author-name::after {
-  background-image: url("../background/ship_mark.png"),
-    url("../background/ship1_medal.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_mark.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship1_medal.png");
 }
 yt-live-chat-membership-item-renderer #author-photo {
   margin-left: 14px;
@@ -365,24 +365,24 @@ yt-live-chat-membership-item-renderer #card::before {
   top: 6px;
   left: -6px;
   z-index: 0;
-  background-image: url("../background/138.png"), url("../background/198.png"),
-    url("../background/ship_ticker.png"), url("../background/ship3_wave1.png"),
-    url("../background/ship3_wave2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/138.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/198.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_ticker.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship3_wave1.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship3_wave2.png");
   background-size: 69px 42px, 69px 42px, 141px 18px, 1771px 128px, 1835px 160px;
   background-repeat: no-repeat, no-repeat, no-repeat, repeat-x, repeat-x;
   background-position: left + 22px bottom + 10px, right + 26px bottom + 10px,
     center center, 0px 40px, 0px 10px;
 }
 yt-live-chat-membership-item-renderer[privilegetype="2"] #card::before {
-  background-image: url("../background/1998.png"), url("../background/1588.png"),
-    url("../background/ship_ticker.png"), url("../background/ship2_wave1.png"),
-    url("../background/ship2_wave2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/1998.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/1588.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_ticker.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship2_wave1.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship2_wave2.png");
   background-size: 87px 42px, 86px 42px, 141px 18px, 1771px 128px, 1835px 160px;
 }
 yt-live-chat-membership-item-renderer[privilegetype="1"] #card::before {
-  background-image: url("../background/19998.png"),
-    url("../background/15998.png"), url("../background/ship_ticker.png"),
-    url("../background/ship1_wave1.png"), url("../background/ship1_wave2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/19998.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/15998.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_ticker.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship1_wave1.png"), url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship1_wave2.png");
   background-size: 105px 42px, 103px 42px, 141px 18px, 1771px 128px,
     1835px 160px;
 }
@@ -391,7 +391,7 @@ yt-live-chat-membership-item-renderer #card::after {
   width: calc(100% - 400px);
   height: calc(100% - 160px);
   border: solid;
-  border-image-source: url("../background/ship_box.png");
+  border-image-source: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_box.png");
   border-image-slice: 0 202 71 153 fill;
   border-width: 0px 202px 71px 153px;
   position: absolute;
@@ -403,7 +403,7 @@ yt-live-chat-membership-item-renderer #header::before {
   content: "";
   width: 74px;
   height: 42px;
-  background-image: url("../background/ship3_ticker.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship3_ticker.png");
   background-size: 74px 42px;
   background-repeat: no-repeat;
   background-position: left top;
@@ -418,7 +418,7 @@ yt-live-chat-membership-item-renderer #header::after {
   padding: 4px 0px 0px 50px;
   width: 143px;
   height: 42px;
-  background-image: url("../background/ship_price.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship_price.png");
   background-size: 143px 42px;
   background-repeat: no-repeat;
   background-position: left top;
@@ -428,13 +428,13 @@ yt-live-chat-membership-item-renderer #header::after {
   z-index: 2;
 }
 yt-live-chat-membership-item-renderer[privilegetype="2"] #header::before {
-  background-image: url("../background/ship2_ticker.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship2_ticker.png");
 }
 yt-live-chat-membership-item-renderer[privilegetype="2"] #header::after {
   content: "提督";
 }
 yt-live-chat-membership-item-renderer[privilegetype="1"] #header::before {
-  background-image: url("../background/ship1_ticker.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/ship1_ticker.png");
 }
 yt-live-chat-membership-item-renderer[privilegetype="1"] #header::after {
   content: "总督";
@@ -458,7 +458,7 @@ yt-live-chat-paid-message-renderer #author-photo::before {
   content: "";
   width: 41px;
   height: 48px;
-  background-image: url("../background/gift_photo1.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_photo1.png");
   background-size: 41px 48px;
   background-repeat: no-repeat;
   background-position: left top;
@@ -471,8 +471,8 @@ yt-live-chat-paid-message-renderer #author-photo::after {
   content: "";
   width: 89px;
   height: 123px;
-  background-image: url("../background/gift_photo2.png"),
-    url("../background/gift_photo.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_photo2.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_photo.png");
   background-size: 25px 25px, 89px 123px;
   background-repeat: no-repeat, no-repeat;
   background-position: 4px 56px, left top;
@@ -484,7 +484,7 @@ yt-live-chat-paid-message-renderer #author-photo::after {
 yt-live-chat-paid-message-renderer #header {
   background-color: #ffcc00 !important;
   border-radius: 0px !important;
-  background-image: url("../background/name_back.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/name_back.png");
   background-size: 112px 53px;
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -505,7 +505,7 @@ yt-live-chat-paid-message-renderer #content::after {
   content: "";
   width: 258px;
   height: 34px;
-  background-image: url("../background/gift_border.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_border.png");
   background-size: 258px 34px;
   background-repeat: no-repeat, no-repeat;
   background-position: left top, right bottom;
@@ -518,8 +518,8 @@ yt-live-chat-paid-message-renderer #header::before {
   content: "";
   width: calc(100% + 14px);
   height: calc(100% + 8px);
-  background-image: url("../background/gift_name1.png"),
-    url("../background/gift_name2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_name1.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_name2.png");
   background-size: 153px 48px, 71px 44px;
   background-repeat: no-repeat, no-repeat;
   background-position: left top, right bottom;
@@ -532,7 +532,7 @@ yt-live-chat-paid-message-renderer #header::after {
   content: "";
   width: 60px;
   height: 64px;
-  background-image: url("../background/gift_ticker.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_ticker.png");
   background-size: 60px 64px;
   background-repeat: no-repeat, no-repeat;
   background-position: left top, right bottom;
@@ -550,7 +550,7 @@ yt-live-chat-paid-message-renderer:not([giftname="superchat"])
   bottom: -18px;
   padding: 13px 10px 13px 10px;
   border: solid;
-  border-image-source: url("../background/gift_price.png");
+  border-image-source: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/gift_price.png");
   border-image-slice: 1 31 1 25 fill;
   border-width: 1px 31px 1px 25px;
   transform: rotate(15deg);
@@ -566,8 +566,8 @@ yt-live-chat-paid-message-renderer[giftname="superchat"] #purchase-amount {
   transform: rotate(15deg);
   z-index: -1;
   background-color: #000;
-  background-image: url("../background/sc_price1.png"),
-    url("../background/sc_price2.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/sc_price1.png"),
+    url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/sc_price2.png");
   background-size: 20px 4px, 32px 32px;
   background-repeat: no-repeat, no-repeat;
   background-position: left + 4px bottom + 4px, right + 4px bottom + 4px;
@@ -579,16 +579,16 @@ yt-live-chat-paid-message-renderer[giftname="superchat"] #content {
   z-index: -2;
   padding: 16px 10px 8px 10px;
   position: relative;
-  background-image: url("../background/sc_back.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/sc_back.png");
   background-size: 15px 10px;
   background-repeat: repeat-x;
   background-position: left top;
 }
 yt-live-chat-paid-message-renderer[giftname="superchat"] #content::after {
-  background-image: url("../background/sc_border.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/sc_border.png");
 }
 yt-live-chat-paid-message-renderer[giftname="superchat"] #header::after {
-  background-image: url("../background/sc_ticker.png");
+  background-image: url("https://gcore.jsdelivr.net/gh/yokinanya/blivechat_splatoon@master/images/sc_ticker.png");
 }
 yt-live-chat-paid-message-renderer[price-level="0"] {
   display: none;
